2006-09-04  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-selection.[ch]: hide the internal API.

	* app/display/gimpdisplayshell-appearance.c
	* app/display/gimpdisplayshell-callbacks.c
	* app/display/gimpdisplayshell-handlers.c
	* app/display/gimpdisplayshell.[ch]
	* app/tools/gimpcolortool.c
	* app/tools/gimpeditselectiontool.c
	* app/tools/gimpmovetool.c: changed accordingly.

	* app/config/gimpdisplayconfig.c
	* app/dialogs/preferences-dialog.c: increased the default marching
	ants speed.

2006-09-04  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-selection.[ch]: some cleanup. Made
	the Selection struct private and removed unused state member.
	Removed redundant parameter from gimp_display_shell_selection_start().

	* app/display/gimpdisplayshell-callbacks.c
	* app/display/gimpdisplayshell.c: changed accordingly.

2006-09-04  Michael Natterer  <mitch@gimp.org>

	* app/paint/paint-enums.[ch]: removed enum GimpHealAlignMode, we
	use the GimpSourceAlignMode now and can always disable REGISTERED
	in the GUI should it turn out to be really totally pointless.

	* app/paint/Makefile.am
	* app/paint/gimphealoptions.[ch]: removed. Its properties are
	completely covered by GimpSourceOptions.

	* app/paint/gimpheal.[ch]: derive from GimpSourceCore.

	* app/tools/gimphealtool.[ch]: derive from GimpSourceTool.

2006-09-04  Sven Neumann  <sven@gimp.org>

	* menus/image-menu.xml.in: added the Heal tool to the Tools menu.

2006-09-04  Jakub Steiner <jimmac@ximian.com>

	* themes/Default/images/tools/stock-tool-heal*: touch up the heal
	brush tool icon

2006-09-04  Sven Neumann  <sven@gimp.org>

	* app/base/tile-cache.c: only run the idle swapper if needed and
	use a lower priority for the timeout.

2006-09-04  Michael Natterer  <mitch@gimp.org>

	* app/tools/Makefile.am
	* app/tools/gimpsourcetool.[ch]: new class which is essentially a
	copy of GimpCloneTool with s/clone/source/ plus some minor
	modifications.
